--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,6 @@
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20"
-  }
+  },
+  "devDependencies": {}
 }
